Fix: integración completa backend-frontend con LDAP, MongoDB y CORS
- Configurar LdapConfig con referrals e IgnorePartialResultException
- Corregir base DN duplicado en obtenerGrupos() y contextSourceAdmin
- Agregar cambiarGrupoUsuario() en LdapAdminService con permisos Write
- Habilitar CORS en SecurityConfig para localhost:3000 y 5173
- Configurar @EnableJpaRepositories y @EnableMongoRepositories
- Reemplazar RestTemplate por HardwareService directo en InventarioCompletoServiceImpl
- Agregar endpoint GET /api/inventario para listar todos
- Frontend: selects dinámicos para ubicación y responsable en alta de equipo
- Frontend: formularios de alta de ubicación, responsable y equipo con hardware
- Agregar MongoConfig para forzar base de datos correcta